<resources>
    <string name="app_name">FastFashion</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="permissionMissSnackbar">\"A kamera használata nincs engedélyezve\"</string>
    <string name="title_details">Ruhadarab részletei</string>
    <string name="detail_load_error">Nem sikerült betölteni a ruhadarabot!</string>
    <string name="title_Main">Főmenü</string>
    <string name="delete_succ">Sikeres törlés!</string>
    <string name="delete_unsucc">Sikertelen törlés!</string>
    <string name="igen">IGEN</string>
    <string name="nem">NEM</string>
    <string name="delete_msg">Biztosan törölni szeretnéd ezt a ruhadarabot?</string>
    <string name="type">Típus</string>
    <string name="style">Stílus</string>
    <string name="load_error_all">Nem sikerült betölteni a ruhadarabokat!</string>
    <string name="title_list">Ruhadarabok</string>
    <string name="title_upload">Feltöltés</string>
    <string name="err_upload">Nincs kitöltve minden mező!</string>
    <string name="upload_succ">Új ruhadarab feltöltve!</string>
    <string name="upload_unsucc">Nem sikerült feltölteni a ruhadarabot!</string>
    <string name="cat_empty">Adja meg a kategóriát!</string>
    <string name="date_empty">Válassza ki a dátumot!</string>
    <string name="detail_empty">Adjon meg leírást!</string>
    <string name="style_empty">Adja meg a stílust</string>
    <string name="unsucc_login">Sikertelen bejelentkezés!</string>
    <string name="login_error">Hibás felhasználónév vagy jelszó!</string>
    <string name="register_succ">Sikeres regisztráció!</string>
    <string name="register_unsucc">Sikertelen regisztráció!</string>
    <string name="hint_username">Felhasználónév</string>
    <string name="hint_pwd">Jelszó</string>
    <string name="btn_login">Bejelentkezés</string>
    <string name="btn_reg">Regisztráció</string>
    <string name="detail">Leírás</string>
    <string name="purchase_date">Megvásárlási dátum</string>
    <string name="sty">Stílus</string>
    <string name="kat">Kategória</string>
    <string name="category">Kategória</string>
    <string name="btn_new_item">Új elem</string>
    <string name="btn_list">Ruhadarabok</string>
    <string name="btn_logout">Kijelentkezés</string>
    <string name="upload">Feltöltés</string>
    <string name="hint_value">Keresési érték</string>
    <string name="btn_search">Keresés</string>
    <string name="btn_all">Osszes</string>
</resources>
