<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_list"
        tools:context=".ListActivity">

    <LinearLayout  app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                   android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical"
                   android:id="@+id/linearLayout">
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:layout_margin="10dp"
    android:orientation="horizontal" android:weightSum="2" >

        <Spinner android:layout_width="match_parent" android:layout_height="30dp" android:layout_weight="1"
         android:id="@+id/spinner"/>
        <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:hint="@string/hint_value" android:layout_weight="1"
                  android:id="@+id/etSearchValue"/>
    </LinearLayout>
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="horizontal" android:weightSum="2" android:layout_margin="10dp">
                <Button android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/btn_search" android:id="@+id/btnSearch"
                        android:layout_weight="1" android:layout_marginRight="10dp"/>

            <Button android:layout_weight="1" android:layout_marginLeft="10dp" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:text="@string/btn_all" android:id="@+id/btnAll"/>


        </LinearLayout>
    </LinearLayout>


    <android.support.v7.widget.RecyclerView
            android:id="@+id/rvList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_constraitStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/linearLayout"/>

</android.support.constraint.ConstraintLayout>