<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".UploadActivity"
        android:layout_margin="20dp">

    <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp" app:srcCompat="@android:drawable/ic_menu_camera"
            android:id="@+id/ivPicture"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toTopOf="@+id/tvCategory"
            app:layout_constraintVertical_chainStyle="packed"/>

    <TextView android:id="@+id/tvCategory" android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="Kategória"
              app:layout_constraintTop_toBottomOf="@+id/ivPicture"
              app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
              android:layout_marginStart="8dp"
              app:layout_constraintBottom_toTopOf="@+id/etCategory"
              android:layout_marginTop="16dp" android:textStyle="bold" android:textSize="18sp"/>

    <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
              android:id="@+id/etCategory"
              app:layout_constraintTop_toBottomOf="@+id/tvCategory"
              app:layout_constraintBottom_toTopOf="@+id/tvStyle"/>


    <TextView android:id="@+id/tvStyle" android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/style"
              app:layout_constraintTop_toBottomOf="@+id/etCategory"
              app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
              android:layout_marginStart="8dp"
              app:layout_constraintBottom_toTopOf="@+id/etStyle"
              android:layout_marginTop="16dp" android:textStyle="bold" android:textSize="18sp"/>

    <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
              android:id="@+id/etStyle"
              app:layout_constraintTop_toBottomOf="@+id/tvStyle"
              app:layout_constraintBottom_toTopOf="@+id/tvDate"/>
    <TextView android:id="@+id/tvDate" android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/purchase_date"
              app:layout_constraintTop_toBottomOf="@+id/etStyle"
              app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
              android:layout_marginStart="8dp"
              app:layout_constraintBottom_toTopOf="@+id/etDate"
              android:layout_marginTop="16dp" android:textStyle="bold" android:textSize="18sp"/>

    <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
              android:id="@+id/etDate"
              app:layout_constraintTop_toBottomOf="@+id/tvDate"
              app:layout_constraintBottom_toTopOf="@+id/tvDesc"/>
    <TextView android:id="@+id/tvDesc" android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/detail"
              app:layout_constraintTop_toBottomOf="@+id/etDate"
              app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
              android:layout_marginStart="8dp"
              app:layout_constraintBottom_toTopOf="@+id/etDesc"
              android:layout_marginTop="16dp" android:textStyle="bold" android:textSize="18sp"/>

    <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
              android:id="@+id/etDesc"
              app:layout_constraintTop_toBottomOf="@+id/tvDesc"
              app:layout_constraintBottom_toTopOf="@+id/btnSave"/>
    <Button
            android:text="@string/upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnSave" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>

</android.support.constraint.ConstraintLayout>