<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".DetailsActivity"
        android:weightSum="2"

>
    <ImageView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@android:drawable/btn_dialog"
            android:id="@+id/imageView"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>
    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent">
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
    android:layout_margin="20dp">

        <TextView android:text="@string/kat" android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:id="@+id/labelCategory" app:layout_constraintTop_toTopOf="parent"
                  app:layout_constraintBottom_toTopOf="@+id/textViewCategory"
                  app:layout_constraintStart_toStartOf="parent" android:textStyle="bold" android:textSize="18sp"
                  android:textAllCaps="false"/>
        <TextView
                android:id="@+id/textViewCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/labelCategory"
                app:layout_constraintBottom_toTopOf="@+id/labelStyle"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="16dp"
                android:textSize="14sp"/>


        <TextView android:text="@string/sty" android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:id="@+id/labelStyle" app:layout_constraintTop_toBottomOf="@+id/textViewCategory"
                  app:layout_constraintBottom_toTopOf="@+id/textViewStyle"
                  app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="16dp"
                  android:textStyle="bold" android:textSize="18sp"/>
        <TextView
                android:id="@+id/textViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/labelStyle"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginBottom="20dp"
                app:layout_constraintBottom_toTopOf="@+id/labelDate"
                android:layout_marginLeft="16dp" android:textSize="14sp"/>


        <TextView android:text="@string/purchase_date" android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:id="@+id/labelDate"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintBottom_toTopOf="@+id/textViewDate"
                  app:layout_constraintTop_toBottomOf="@+id/textViewStyle"
                  android:textStyle="bold" android:textSize="18sp"/>
        <TextView
                android:id="@+id/textViewDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="16dp"
                app:layout_constraintTop_toBottomOf="@+id/labelDate" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/labelDesc"/>


        <TextView android:text="@string/detail" android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:id="@+id/labelDesc" app:layout_constraintTop_toBottomOf="@id/textViewDate"
                  app:layout_constraintBottom_toTopOf="@+id/textViewDesc"
                  app:layout_constraintStart_toStartOf="parent"
                  android:textStyle="bold" android:textSize="18sp"/>
        <TextView
                android:id="@+id/textViewDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/labelDesc" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="16dp"
        />

    </android.support.constraint.ConstraintLayout>
    </ScrollView>
</LinearLayout>
